--- a/AulaPratica/style.css
+++ b/AulaPratica/style.css
@@ -1,5 +1,5 @@
 body{
-    font-weight: 500;
+    font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     line-height: 2.2en;
@@ -57,3 +57,10 @@ table tr:nth-child(even){
 table tr:nth-child(odd){
     background-color: darkblue;
 }
+#impressões .figure figure{
+    display: inline-block;
+}
+#impressões .figure, #impressões .video{
+    text-align: center;
+}
+#
