--- a/AulaPratica/style.css
+++ b/AulaPratica/style.css
@@ -1,19 +1,21 @@
 header{
-    background-color:yellow;
+    background-color:black;
+    font-weight: 700;
 }
 section, footer{
     margin: 40px;
 }
 h1{
     font-size: 50px;
-    color:black;
+    color:white;
     padding: 15px;
     text-align: center;
+    font-weight: 700;
 }
 h2{
-    font-size: 30px;
+    font-size: 25px;
     text-transform: uppercase;
-    color: black;
+    color: white;
     font-weight: 700;
 }
 table{
@@ -25,10 +27,8 @@ table td{
     padding: 5px;
 }
 table tr:nth-child(even){
-    background-color: rgb(18, 17, 17); 
 }
 table tr:nth-child(odd){
-    background-color: rgb(18, 17, 17);
 }
 #impressões .figure figure{
     display: inline-block;
@@ -36,4 +36,18 @@ table tr:nth-child(odd){
 #impressões .video{
     text-align: center;
 }
+section{
+    font-size: 15px;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
+header{
+    color: white;
+    padding: 15px;
+    }
+    legend{
+        color:white;
+        padding: 15px;
+    }
 
